--- a/Notebooks/daniel_transformer2.ipynb
+++ b/Notebooks/daniel_transformer2.ipynb
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "c3bea712",
    "metadata": {},
    "outputs": [],
@@ -726,7 +726,7 @@
     "        ax=ax\n",
     "    )\n",
     "    \n",
-    "    ax.set_title(f'Attention Head #{head_index} (Padding Removed)')\n",
+    "    ax.set_title(f'Attention Head #{head_index}')\n",
     "    plt.show()\n"
    ]
   },
