Improved correctness for the combined models

--- a/Notebooks/Combine models V4.ipynb
+++ b/Notebooks/Combine models V4.ipynb
@@ -150,13 +150,15 @@
         "        self.batch_size = 256\n",
         "        self.embedding_dim = 200\n",
         "        self.hidden_dim = 128\n",
+        "        self.max_combined_len = 130 #to join premise + hypothesis + cls + sep \n",
+        "        self.patience = 5\n",
         "        #Embedding\n",
         "        self.embedding_method = \"\"\n",
         "        self.max_pre_pros_len = 128\n",
         "        self.emb_lr = 0.0005\n",
         "        self.emb_epoch = 3\n",
         "        self.emb_window_size = 5\n",
-        "        # Transformer\n",
+        "        # Models\n",
         "        self.n_heads = 2\n",
         "        self.n_layers = 2\n",
         "        self.dropout = 0.2\n",
@@ -164,7 +166,6 @@
         "        self.lr = 0.00005\n",
         "        self.wd = 0.00005\n",
         "        self.train_num_epoch = 7\n",
-        "        self.max_trans_len = 130\n",
         "        self.label_smoothing = 0.0\n",
         "\n",
         "    def display(self): # Display all the config parameters \n",
@@ -175,7 +176,7 @@
         "        print(f\"  Method: {self.embedding_method}\")\n",
         "        print(f\"  Max length: {self.max_pre_pros_len}\")\n",
         "        print(f\"  Learning rate: {self.emb_lr}\")\n",
-        "        print(f\"  Embedding size: {self.emb_size}\")\n",
+        "        print(f\"  Embedding size: {self.embedding_dim}\")\n",
         "        print(f\"  Epochs: {self.emb_epoch}\")\n",
         "        print(f\"  Window size: {self.emb_window_size}\")\n",
         "        \n",
@@ -188,7 +189,7 @@
         "        print(f\"  Learning rate: {self.lr}\")\n",
         "        print(f\"  Weight decay: {self.wd}\")\n",
         "        print(f\"  Training epochs: {self.train_num_epoch}\")\n",
-        "        print(f\"  Max sequence length: {self.max_trans_len}\")\n",
+        "\n",
         "        print(f\"  Label smoothing: {self.label_smoothing}\")\n",
         "        print(\"=\" * 60)\n"
       ]
@@ -492,7 +493,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -520,13 +521,13 @@
         "                + [SEP_ID] \\\n",
         "                + [word2id.get(w,UNK_ID) for w in hypothesis_toks] \n",
         "        # Truncate\n",
-        "        tokens = tokens[:max_len * 2 + 2] #to combine len of hypothesis and premise, plus cls and sep  \n",
+        "        tokens = tokens[:max_len] #to combine len of hypothesis and premise, plus cls and sep  \n",
         "\n",
         "        # Attention mask \n",
         "        attn = [1] * len(tokens)\n",
         "\n",
         "        # Pad\n",
-        "        pad_len = max_len- len(tokens) # To fill the [PAD]\n",
+        "        pad_len = max_len - len(tokens) # To fill the [PAD]\n",
         "        if pad_len > 0:\n",
         "            tokens += [PAD_ID] * pad_len\n",
         "            attn += [0] * pad_len # FLag positions as padding \n",
@@ -543,7 +544,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -572,9 +573,9 @@
       ],
       "source": [
         "# Build train/test\n",
-        "x_train, plain_train, train_masks, y_train = prepare_indexed_data(clean_train_dataset, word2id, hyperparameters.max_word_len)\n",
-        "x_test,  plain_test, test_masks,  y_test  = prepare_indexed_data(clean_test_dataset,  word2id, hyperparameters.max_word_len)\n",
-        "x_valid,  plain_valid, valid_masks,  y_valid  = prepare_indexed_data(clean_validation_dataset,  word2id, hyperparameters.max_word_len)\n",
+        "x_train, plain_train, train_masks, y_train = prepare_indexed_data(clean_train_dataset, word2id, hyperparameters.max_combined_len)\n",
+        "x_test,  plain_test, test_masks,  y_test  = prepare_indexed_data(clean_test_dataset,  word2id, hyperparameters.max_combined_len)\n",
+        "x_valid,  plain_valid, valid_masks,  y_valid  = prepare_indexed_data(clean_validation_dataset,  word2id, hyperparameters.max_combined_len)\n",
         "\n",
         "print(\"Shape of x_train:\", x_train.shape)\n",
         "print(\"Shape of train_masks:\", train_masks.shape)\n",
@@ -1183,7 +1184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1209,15 +1210,12 @@
         "    return total_loss/total, total_correct/total\n",
         "\n",
         "@torch.no_grad()\n",
-        "def evaluate_model(model, loader):\n",
+        "def evaluate_model(model, loader, criterion):\n",
         "    model.eval()\n",
         "    total_loss = 0.0\n",
         "    total_correct = 0\n",
         "    total = 0\n",
-        "    y_train_np = y_train.cpu().numpy()\n",
-        "    weights = compute_class_weight('balanced', classes=np.unique(y_train_np), y=y_train_np)\n",
-        "    criterion = nn.CrossEntropyLoss(weight=torch.tensor(weights, dtype=torch.float).to(device))\n",
-        "\n",
+        "    \n",
         "    for xb, mb, yb in loader:\n",
         "        xb, mb, yb = xb.to(device), mb.to(device), yb.to(device).long()\n",
         "        out = model(xb, mb)\n",
@@ -1242,7 +1240,7 @@
         "\n",
         "    for epoch in range(n_epochs):\n",
         "        train_loss, train_acc = train_epoch(model, train_loader, optimizer,criterion)\n",
-        "        val_loss, val_acc = evaluate_model(model, valid_loader)\n",
+        "        val_loss, val_acc = evaluate_model(model, valid_loader, criterion)\n",
         "\n",
         "        history[\"train_loss\"].append(train_loss)\n",
         "        history[\"train_acc\"].append(train_acc)\n",
@@ -1272,29 +1270,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 122,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "def train_models(gru = False, lstm = False, transformer = False, monstruosity = False ):\n",
+        "    # Calculate the class weights because of the imbalance data \n",
+        "    y_train_np = y_train.cpu().numpy()\n",
+        "    weights = compute_class_weight('balanced', classes=np.unique(y_train_np), y=y_train_np)\n",
+        "    criterion = nn.CrossEntropyLoss(weight=torch.tensor(weights, dtype=torch.float).to(device))\n",
+        "    # Optimizer\n",
+        "    optimizer = torch.optim.AdamW(gru_model.parameters(), lr=hyperparameters.lr, weight_decay=hyperparameters.wd)\n",
+        "\n",
         "    # Train GRU \n",
         "    if gru:\n",
         "        gru_model.to(device)\n",
-        "        optimizer = torch.optim.AdamW(gru_model.parameters(), lr=hyperparameters.lr, weight_decay=hyperparameters.wd)\n",
-        "        trained_GRU_model, history = train_model(gru_model, train_loader, valid_loader, optimizer, n_epochs=hyperparameters.train_num_epoch, patience=5)\n",
+        "        trained_GRU_model, history = train_model(gru_model, train_loader, valid_loader, optimizer, n_epochs=hyperparameters.train_num_epoch, patience=hyperparameters.patience, criterion=criterion)\n",
         "    \n",
         "    # Train LSTM \n",
         "    if lstm:\n",
         "        lstm_model.to(device)\n",
-        "        optimizer = torch.optim.AdamW(gru_model.parameters(), lr=hyperparameters.lr, weight_decay=hyperparameters.wd)\n",
-        "        trained_LSTM_model, history = train_model(lstm_model, train_loader, valid_loader, optimizer, n_epochs=hyperparameters.train_num_epoch, patience=5)\n",
+        "        trained_LSTM_model, history = train_model(lstm_model, train_loader, valid_loader, optimizer, n_epochs=hyperparameters.train_num_epoch, patience=hyperparameters.patience, criterion=criterion)\n",
         "\n",
         "    # Train Transformer \n",
         "    if transformer:\n",
         "        transformer_model.to(device)\n",
-        "        optimizer = torch.optim.AdamW(transformer_model.parameters(), lr = hyperparameters.lr, weight_decay=hyperparameters.wd)\n",
-        "        trained_Transformer_model, history = train_model(transformer_model, train_loader=train_loader, valid_loader=valid_loader,optimizer=optimizer, n_epochs=hyperparameters.train_num_epoch)\n",
+        "        trained_Transformer_model, history = train_model(transformer_model, train_loader, valid_loader, optimizer, n_epochs=hyperparameters.train_num_epoch, patience=hyperparameters.patience, criterion=criterion)\n",
         "\n"
       ]
     },
