--- a/Notebooks/Combine models V4.ipynb
+++ b/Notebooks/Combine models V4.ipynb
@@ -813,7 +813,7 @@
         "                                  lr=hyperparameters.emb_lr)\n",
         "\n",
         "#if skip gram model \n",
-        "#fast_text_model.wv.most_similar('saturn', topn=10)\n",
+        "#fast_text_model.most_similar('saturn', topn=10)\n",
         "#If Fast Text model \n",
         "fast_text_model.wv.most_similar('saturn', topn=10)\n",
         "\n",
